--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "customer-application-fe": {
+    "customer-application-client": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/customer-application-fe",
+            "outputPath": "dist/customer-application-client",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -58,18 +59,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "customer-application-fe:build"
+            "browserTarget": "customer-application-client:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "customer-application-fe:build:production"
+              "browserTarget": "customer-application-client:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "customer-application-fe:build"
+            "browserTarget": "customer-application-client:build"
           }
         },
         "test": {
@@ -80,6 +81,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -103,7 +105,7 @@
         }
       }
     },
-    "customer-application-fe-e2e": {
+    "customer-application-client-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -112,11 +114,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "customer-application-fe:serve"
+            "devServerTarget": "customer-application-client:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "customer-application-fe:serve:production"
+              "devServerTarget": "customer-application-client:serve:production"
             }
           }
         },
@@ -132,5 +134,5 @@
       }
     }
   },
-  "defaultProject": "customer-application-fe"
+  "defaultProject": "customer-application-client"
 }
